--- a/home_and_about/index.html
+++ b/home_and_about/index.html
@@ -14,7 +14,7 @@
     <meta name="format-detection" content="telephone=no">
 
     <title>
-        All Your Home Services in One Place | Utility Saving Hub
+        Connected Home, Simplified Life| AB Smart Connections Hub
     </title>
 
     <link rel="shortcut icon" href="images/logo-choose-energy-white-35a44b037c.svg">
@@ -89,14 +89,14 @@
                         <div class="hero__inner u-display-flex u-flex-direction-column u-flex-direction-row@lg u-align-items-center@lg u-justify-content-space-around@lg">
                             <div class="hero__heading-wrapper hero__heading--no-image u-display-flex u-flex-wrap-wrap u-align-items-center">
                                 <h1 class="hero__headline" style="padding-bottom: 1rem;">
-                                    All Your Home Services in One Place
+                                    Connected Home, Simplified Life
                                 </h1>
 
                                 <div class="hero__byline">
                                     <div class="hero__byline-section hero__byline-author">
                                         <div>
                                             <a><span style="line-height: normal;">Owning a home can be demanding. That's where
-                            Utility Savings Hub steps in, acting as your
+                            AB Smart Connections Hub steps in, acting as your
                             trusted intermediary. By connecting buyers like
                             you with esteemed suppliers, we ensure you get
                             quality services without the hassle.</span></a>
@@ -174,7 +174,165 @@
             </header>
         </div>
     </div>
+    <main class="main u-max-width">
+        <div class="main__inner">
+            <article class="content landing__electricity-infographic u-full-width">
+                <div class="content__body u-display-flex u-flex-direction-column u-align-items-center u-max-width">
+                    <h2 class="landing__electricity-infographic-header">
+                        Three good reasons to manage your home or business utility prices
+                    </h2>
+                    <ul class="u-display-flex u-flex-direction-column u-flex-direction-row@lg u-align-items-flex-end@lg">
+                        <li class="landing__electricity-infographic--infographic">
+                            <img class="lozad" data-src="./uploads/2019/04/save.svg" alt="Save">
+                            <p class="landing__electricity-infographic-text">
+                                Managing rates reduces expenses
+                            </p>
+                        </li>
 
+                        <li class="landing__electricity-infographic--infographic">
+                            <img class="lozad" data-src="./uploads/2019/04/predictable.svg" alt="Predictable">
+                            <p class="landing__electricity-infographic-text">
+                                Updating the latest protective technology
+                            </p>
+                        </li>
+
+                        <li class="landing__electricity-infographic--infographic">
+                            <img class="lozad" data-src="./uploads/2019/04/planet.svg" alt="Planet">
+                            <p class="landing__electricity-infographic-text">
+                                Reviewing rates ensures you pay for what you need
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+            </article>
+            <article class="content landing__state-search u-full-width" style="overflow: hidden;">
+                <div class="u-max-width">
+                    <div class="content__body landing__state-search--form u-display-flex u-flex-direction-column u-width-1/2@lg">
+                        <div class="landing__state-search--form--inner">
+                            <h2 class="u-text-align-left">Do you use the AB Smart Connections Hub?</h2>
+
+                            <p>
+                                <br>
+                            </p>
+
+                            <form class="u-display-flex state-search__input-bar js-state-search">
+                                <input class="state-search__input awesomplete js-state-search-input" name="phone"
+                                       placeholder="Phone Number" required="" aria-label="Phone number input">
+                                <button class="state-search__submit button button--form js-state-search-submit"
+                                        type="submit">
+                                    GO
+                                </button>
+                            </form>
+
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="content content--video u-full-width">
+                <div class="content__body u-max-width">
+
+                    <div class="copy__text">
+                        <p class="u-text-align-center " style="padding-top: 5rem;">
+                            AB Smart Connections Hub operates on a simple idea: When you
+                            choose AB Smart Connections Hub, you get more control of your life.
+                            Choose to save today by entering your Email OR Phone Number above and start comparing
+                            rates. Learn more below.
+                        </p>
+                    </div>
+                </div>
+            </article>
+            <article class="content content--primary u-width-3/4@xl">
+                <span id="" class="jumplink-target"></span>
+                <div class="content__body">
+                    <div class="copy">
+                        <h2 class="copy__headline">
+                            In the fields of utility, telecom and home automation, how does AB Smart Connections Hub
+                            remain
+                            competitive and innovative? </h2>
+
+                        <div class="copy__text">
+                            <p>
+                    <span style="font-weight: 400;">
+                      AB Smart Connections Hub maintains its competitiveness and innovation in utility, telecom and home automation through a multifaceted approach. We invest significantly in ongoing research and development to stay current with industry trends and emerging technologies. It allows us to offer cutting-edge solutions to our customers. We actively engage with industry experts and organizations, attending conferences and collaborating with partners to gain insights and access to the latest innovations. This collaboration helps us remain at the forefront of the industry. We prioritize customer feedback and adapt our services to meet their evolving needs. This customer-centric approach ensures that our solutions are not only competitive but also aligned with what our customers require. We keep a close eye on regulatory changes and compliance, ensuring that our services meet industry standards and provide the highest levels of security. AB Smart Connections Hub's commitment to research, collaboration, customer focus, and compliance helps us remain competitive and innovative in utility, telecom and home automation. </span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="content content--primary u-width-3/4@xl">
+                <span id="" class="jumplink-target"></span>
+                <div class="content__body">
+                    <div class="copy">
+                        <h2 class="copy__headline">
+                            How does AB Smart Connections Hub follow utility, telecom and home automation trends for
+                            excellent
+                            services? </h2>
+
+                        <div class="copy__text">
+                            <p>
+                    <span style="font-weight: 400;">
+                      AB Smart Connections Hub remains attentive to the evolving trends in telecommunications and home security to ensure the delivery of excellent services. Our approach involves several vital practices. We prioritize ongoing research and development efforts, which include studying industry trends and emerging technologies. It enables us to offer state-of-the-art solutions to our clients. We actively engage with industry experts, participate in conferences, and cultivate partnerships with organizations to gain insights into the latest innovations. This collaborative approach ensures that we stay at the forefront of industry advancements. We place a strong emphasis on customer feedback, actively incorporating their insights into our service offerings. This customer-centric orientation ensures that our solutions not only maintain their competitive edge but also effectively address the evolving needs of our clients. We meticulously monitor regulatory changes and adhere to compliance standards, ensuring our services align with industry regulations. AB Smart Connections Hub's commitment to research, collaboration, customer focus, and compliance underpins our ability to offer excellent services in telecommunications and home security.  </span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </article>
+
+            <article class="content landing__steps">
+                <div class="content__body">
+                    <h4 style="text-align: center;">How can I save my utility expense?</h4>
+                    <ul class="u-display-flex u-flex-direction-column u-flex-direction-row@lg u-align-items-center u-align-items-flex-start@lg">
+                        <li class="landing__electricity-infographic--infographic u-width-1/2">
+                            <iframe class="step-expences"
+                                    src="https://lottie.host/?file=83635432-2735-4b78-9d13-c661aac87df2/0fCYoWp3mH.json"></iframe>
+                            <h3>Step 1</h3>
+                            <p>Enter Your Email OR Phone Number</p>
+                        </li>
+
+                        <li class="landing__electricity-infographic--infographic u-width-1/2">
+                            <iframe class="step-expences"
+                                    src="https://lottie.host/?file=e5c349cd-0263-43c4-be9d-76fa24d0fc10/JADgA1RQwi.json"></iframe>
+                            <h3>Step 2</h3>
+                            <p>Get Prices and Compare Plans</p>
+                        </li>
+
+                        <li class="landing__electricity-infographic--infographic u-width-1/2">
+                            <iframe class="step-expences"
+                                    src="https://lottie.host/?file=94d99ba8-ad83-4265-9727-a8ef155624fa/pQrGtn2A8C.json"></iframe>
+                            <h3>Step 3</h3>
+                            <p>Order the Plan That's Right for You</p>
+                        </li>
+                    </ul>
+                </div>
+            </article>
+            <!--            <article class="content u-padding-bottom-xl">-->
+            <!--                <div class="content__body u-text-align-center">-->
+            <!--                    <h3>Testimonials</h3>-->
+            <!--                    <div class="glide glide&#45;&#45;testimonials">-->
+            <!--                        <div class="glide__track" data-glide-el="track">-->
+            <!--                            <ul class="glide__slides">-->
+            <!--                                <li class="glide__slide">-->
+            <!--                                    <p>-->
+            <!--                                        "AB Smart Connections Hub has streamlined my home utility management with-->
+            <!--                                        excellent rates-->
+            <!--                                        and top-notch service. Their commitment to customizable solutions and customer-->
+            <!--                                        care-->
+            <!--                                        stands out. Highly recommended for all home or business utility and automation-->
+            <!--                                        needs."-->
+            <!--                                    </p>-->
+            <!--                                    &lt;!&ndash; <p>—Janette, Reynoldsburg, OH</p> &ndash;&gt;-->
+            <!--                                </li>-->
+            <!--                            </ul>-->
+            <!--                        </div>-->
+            <!--                        <nav class="glide__bullets" data-glide-el="controls[nav]" style="justify-content: center;">-->
+            <!--                            <button class="glide__bullet" data-glide-dir="=0"-->
+            <!--                                    aria-label="slider bullet button"></button>-->
+            <!--                        </nav>-->
+            <!--                    </div>-->
+            <!--                </div>-->
+            <!--            </article>-->
+        </div>
+    </main>
     <main class="main u-max-width">
         <div class="main__inner">
             <article class="content content--primary u-width-3/4@xl">
@@ -282,6 +440,38 @@
                         </div>
                     </div>
                 </div>
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <p class="title">IOT Solutions</p>
+                        </div>
+                        <div class="flip-card-back">
+                            <p class="back-content">
+                                Welcome to the future of living! Elevate your lifestyle with
+                                our cutting-edge home automation services: control lighting,
+                                temperature, security, and entertainment systems with a
+                                touch or voice command. Our solutions offer convenient and
+                                energy-efficient smart living controls.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <p class="title">RFIDs</p>
+                        </div>
+                        <div class="flip-card-back">
+                            <p class="back-content">
+                                Welcome to the future of living! Elevate your lifestyle with
+                                our cutting-edge home automation services: control lighting,
+                                temperature, security, and entertainment systems with a
+                                touch or voice command. Our solutions offer convenient and
+                                energy-efficient smart living controls.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <article class="content content--primary u-width-3/4@xl" style="margin-bottom: 3rem;">
@@ -303,7 +493,7 @@
                 </div>
             </article>
 
-            <div class="container">
+            <div class="container" style="height: 40rem">
 
                 <!-- <div class="topic">CSS Vertical Tab</div> -->
 
@@ -316,8 +506,8 @@
                     <input type="radio" name="slider" id="One-Stop">
                     <input type="radio" name="slider" id="Expertise">
                     <input type="radio" name="slider" id="Transparency">
-                    <input type="radio" name="slider" id="Improvement">
-                    <input type="radio" name="slider" id="Peace">
+<!--                    <input type="radio" name="slider" id="Improvement">-->
+<!--                    <input type="radio" name="slider" id="Peace">-->
 
                     <div class="list">
                         <label for="home" class="home">
@@ -344,12 +534,12 @@
                         <label for="Transparency" class="Transparency">
                             <span>Transparency</span>
                         </label>
-                        <label for="Improvement" class="Improvement">
-                            <span>Continuous Improvement</span>
-                        </label>
-                        <label for="Peace" class="Peace">
-                            <span>Peace of Mind</span>
-                        </label>
+<!--                        <label for="Improvement" class="Improvement">-->
+<!--                            <span>Continuous Improvement</span>-->
+<!--                        </label>-->
+<!--                        <label for="Peace" class="Peace">-->
+<!--                            <span>Peace of Mind</span>-->
+<!--                        </label>-->
                         <div class="slider"></div>
                     </div>
 
@@ -512,12 +702,12 @@
                 <div class="footer--secondary" style="display: flex; justify-content: center;">
                     <div class="footer__contact">
                         <p>
-                            utilitysavingshub.us is operated on behalf of Utility Savings Hub,
+                            utilitysavingshub.us is operated on behalf of AB Smart Connections Hub,
                             LLC
                         </p>
                         <p style="text-align: center;">
-                            Utility Savings Hub, LLC. a Home Expertz Company - <br>5830 E
-                            2nd St Ste 7000 Casper, WY 82609<br>
+                            AB Smart Connections Hub, LLC. a Home Expertz Company - <br>3409 N 7th Ave, PHOENIX, AZ,
+                            85013, USA<br>
                         </p>
                     </div>
                 </div>
