--- a/home_and_about/privacy_policy.html
+++ b/home_and_about/privacy_policy.html
@@ -104,7 +104,7 @@
                                 <h1 class="hero__headline">Privacy Policy</h1>
 
                                 <p class="paragraph-text">
-                                    At Utility Savings Hub, our writers gather information to
+                                    At AB Smart Connections Hub, our writers gather information to
                                     help you manage your energy better. Our partners don't
                                     influence our articles, but we might mention their
                                     products in our posts.
@@ -203,7 +203,7 @@
 
                         <div class="copy__text">
                             <p>
-                                <span style="font-weight: 400;">At Utility Savings Hub, we value your privacy and are committed to protecting the personal information you share with us. This Privacy Policy explains how we collect, use, and safeguard your information.</span>
+                                <span style="font-weight: 400;">At AB Smart Connections Hub, we value your privacy and are committed to protecting the personal information you share with us. This Privacy Policy explains how we collect, use, and safeguard your information.</span>
                             </p>
 
                             <h3 style="text-align: left;">Information We Collect</h3>
@@ -297,12 +297,11 @@
             <div class="footer--secondary" style="display: flex; justify-content: center;">
                 <div class="footer__contact">
                     <p>
-                        utilitysavingshub.us is operated on behalf of Utility Savings Hub,
+                        utilitysavingshub.us is operated on behalf of AB Smart Connections Hub,
                         LLC
                     </p>
                     <p style="text-align: center;">
-                        Utility Savings Hub, LLC. a Home Expertz Company - <br>5830 E
-                        2nd St Ste 7000 Casper, WY 82609<br>
+                        AB Smart Connections Hub, LLC. a Home Expertz Company - <br>3409 N 7th Ave, PHOENIX, AZ, 85013, USA<br>
                     </p>
                 </div>
             </div>
