--- a/home/home.html
+++ b/home/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Utility Savings Hub® | Switch Providers &amp; Save | Enroll Online">
+    <meta property="og:title" content="AB Smart Connections Hub® | Switch Providers &amp; Save | Enroll Online">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <meta property="og:description"
           content="Shop electricity &amp; natural gas rates in 3 easy steps! Find the best energy rates for your home or business from trusted suppliers at Utility Saving Hub LLC®.">
@@ -17,7 +17,7 @@
     <meta name="format-detection" content="telephone=no">
 
     <title>
-        Utility Savings Hub® | Switch Providers &amp; Save | Enroll Online
+        AB Smart Connections Hub® | Switch Providers &amp; Save | Enroll Online
     </title>
 
     <link rel="shortcut icon" href="./assets/images/logo-choose-energy-white-35a44b037c.svg">
@@ -191,7 +191,7 @@
             <div class="u-max-width">
                 <div class="content__body landing__state-search--form u-display-flex u-flex-direction-column u-width-1/2@lg">
                     <div class="landing__state-search--form--inner">
-                        <h2 class="u-text-align-left">Do you use the Utility Savings Hub?</h2>
+                        <h2 class="u-text-align-left">Do you use the AB Smart Connections Hub?</h2>
 
                         <p>
                             <br>
@@ -215,8 +215,8 @@
 
                 <div class="copy__text">
                     <p class="u-text-align-center " style="padding-top: 5rem;">
-                        Utility Savings Hub operates on a simple idea: When you
-                        choose Utility Savings Hub, you get more control of your life.
+                        AB Smart Connections Hub operates on a simple idea: When you
+                        choose AB Smart Connections Hub, you get more control of your life.
                         Choose to save today by entering your Email OR Phone Number above and start comparing
                         rates. Learn more below.
                     </p>
@@ -228,12 +228,12 @@
             <div class="content__body">
                 <div class="copy">
                     <h2 class="copy__headline">
-                        How does Utility Savings Hub keep up with industry changes? </h2>
+                        How does AB Smart Connections Hub keep up with industry changes? </h2>
 
                     <div class="copy__text">
                         <p>
                     <span style="font-weight: 400;">
-                      Utility Savings Hub keeps a close eye on changes in the utility, telecom and home automation industries to offer our customers the best solutions. We conduct ongoing research to stay informed about emerging trends, regulations, and customer preferences. We also build partnerships with industry experts and organizations to gain insights into the latest innovations. Attending industry events like conferences and workshops helps us learn from leaders in the field. We embrace cutting-edge technologies, such as IoT and AI, to ensure our services remain up-to-date. Regulatory compliance is a top priority; we monitor and adhere to industry regulations and standards to guarantee the safety and security of our customers. We actively seek and appreciate customer feedback, using it to improve our services and adapt to their evolving needs. Utility Savings Hub is dedicated to staying informed and adaptable in the dynamic utility, telecom and home automation sectors, ensuring we provide top-quality services.  </span>
+                      AB Smart Connections Hub keeps a close eye on changes in the utility, telecom and home automation industries to offer our customers the best solutions. We conduct ongoing research to stay informed about emerging trends, regulations, and customer preferences. We also build partnerships with industry experts and organizations to gain insights into the latest innovations. Attending industry events like conferences and workshops helps us learn from leaders in the field. We embrace cutting-edge technologies, such as IoT and AI, to ensure our services remain up-to-date. Regulatory compliance is a top priority; we monitor and adhere to industry regulations and standards to guarantee the safety and security of our customers. We actively seek and appreciate customer feedback, using it to improve our services and adapt to their evolving needs. AB Smart Connections Hub is dedicated to staying informed and adaptable in the dynamic utility, telecom and home automation sectors, ensuring we provide top-quality services.  </span>
                         </p>
                     </div>
                 </div>
@@ -244,13 +244,13 @@
             <div class="content__body">
                 <div class="copy">
                     <h2 class="copy__headline">
-                        In the fields of utility, telecom and home automation, how does Utility Savings Hub remain
+                        In the fields of utility, telecom and home automation, how does AB Smart Connections Hub remain
                         competitive and innovative? </h2>
 
                     <div class="copy__text">
                         <p>
                     <span style="font-weight: 400;">
-                      Utility Savings Hub maintains its competitiveness and innovation in utility, telecom and home automation through a multifaceted approach. We invest significantly in ongoing research and development to stay current with industry trends and emerging technologies. It allows us to offer cutting-edge solutions to our customers. We actively engage with industry experts and organizations, attending conferences and collaborating with partners to gain insights and access to the latest innovations. This collaboration helps us remain at the forefront of the industry. We prioritize customer feedback and adapt our services to meet their evolving needs. This customer-centric approach ensures that our solutions are not only competitive but also aligned with what our customers require. We keep a close eye on regulatory changes and compliance, ensuring that our services meet industry standards and provide the highest levels of security. Utility Savings Hub's commitment to research, collaboration, customer focus, and compliance helps us remain competitive and innovative in utility, telecom and home automation. </span>
+                      AB Smart Connections Hub maintains its competitiveness and innovation in utility, telecom and home automation through a multifaceted approach. We invest significantly in ongoing research and development to stay current with industry trends and emerging technologies. It allows us to offer cutting-edge solutions to our customers. We actively engage with industry experts and organizations, attending conferences and collaborating with partners to gain insights and access to the latest innovations. This collaboration helps us remain at the forefront of the industry. We prioritize customer feedback and adapt our services to meet their evolving needs. This customer-centric approach ensures that our solutions are not only competitive but also aligned with what our customers require. We keep a close eye on regulatory changes and compliance, ensuring that our services meet industry standards and provide the highest levels of security. AB Smart Connections Hub's commitment to research, collaboration, customer focus, and compliance helps us remain competitive and innovative in utility, telecom and home automation. </span>
                         </p>
                     </div>
                 </div>
@@ -261,13 +261,13 @@
             <div class="content__body">
                 <div class="copy">
                     <h2 class="copy__headline">
-                        How does Utility Savings Hub follow utility, telecom and home automation trends for excellent
+                        How does AB Smart Connections Hub follow utility, telecom and home automation trends for excellent
                         services? </h2>
 
                     <div class="copy__text">
                         <p>
                     <span style="font-weight: 400;">
-                      Utility Savings Hub remains attentive to the evolving trends in telecommunications and home security to ensure the delivery of excellent services. Our approach involves several vital practices. We prioritize ongoing research and development efforts, which include studying industry trends and emerging technologies. It enables us to offer state-of-the-art solutions to our clients. We actively engage with industry experts, participate in conferences, and cultivate partnerships with organizations to gain insights into the latest innovations. This collaborative approach ensures that we stay at the forefront of industry advancements. We place a strong emphasis on customer feedback, actively incorporating their insights into our service offerings. This customer-centric orientation ensures that our solutions not only maintain their competitive edge but also effectively address the evolving needs of our clients. We meticulously monitor regulatory changes and adhere to compliance standards, ensuring our services align with industry regulations. Utility Savings Hub's commitment to research, collaboration, customer focus, and compliance underpins our ability to offer excellent services in telecommunications and home security.  </span>
+                      AB Smart Connections Hub remains attentive to the evolving trends in telecommunications and home security to ensure the delivery of excellent services. Our approach involves several vital practices. We prioritize ongoing research and development efforts, which include studying industry trends and emerging technologies. It enables us to offer state-of-the-art solutions to our clients. We actively engage with industry experts, participate in conferences, and cultivate partnerships with organizations to gain insights into the latest innovations. This collaborative approach ensures that we stay at the forefront of industry advancements. We place a strong emphasis on customer feedback, actively incorporating their insights into our service offerings. This customer-centric orientation ensures that our solutions not only maintain their competitive edge but also effectively address the evolving needs of our clients. We meticulously monitor regulatory changes and adhere to compliance standards, ensuring our services align with industry regulations. AB Smart Connections Hub's commitment to research, collaboration, customer focus, and compliance underpins our ability to offer excellent services in telecommunications and home security.  </span>
                         </p>
                     </div>
                 </div>
@@ -309,7 +309,7 @@
                         <ul class="glide__slides">
                             <li class="glide__slide">
                                 <p>
-                                    "Utility Savings Hub has streamlined my home utility management with excellent rates
+                                    "AB Smart Connections Hub has streamlined my home utility management with excellent rates
                                     and top-notch service. Their commitment to customizable solutions and customer care
                                     stands out. Highly recommended for all home or business utility and automation
                                     needs."
@@ -384,12 +384,11 @@ toTopButton.addEventListener('click', function () {
             <div class="footer--secondary" style="display: flex; justify-content: center;">
                 <div class="footer__contact">
                     <p>
-                        utilitysavingshub.us is operated on behalf of Utility Savings Hub,
+                        utilitysavingshub.us is operated on behalf of AB Smart Connections Hub,
                         LLC
                     </p>
                     <p style="text-align: center;">
-                        Utility Savings Hub, LLC. a Home Expertz Company - <br>5830 E
-                        2nd St Ste 7000 Casper, WY 82609<br>
+                        AB Smart Connections Hub, LLC. a Home Expertz Company - <br>3409 N 7th Ave, PHOENIX, AZ, 85013, USA<br>
                     </p>
                 </div>
             </div>
