--- a/home_and_about/index.html
+++ b/home_and_about/index.html
@@ -70,7 +70,7 @@
                 <nav class="navbar">
                     <div class="row" style="display: flex !important;justify-content: space-between">
                         <div class="col-6" style="position: relative;bottom: 13rem !important;">
-                            <a href="about.html"><img src="images/digital_2.png"></a>
+                            <a href="index.html"><img src="images/digital_2.png"></a>
                         </div>
                         <ul class="col-6" style="bottom: 12rem !important;">
                             <li><a href="index.html" class="menu-item">Services</a></li>
@@ -506,8 +506,8 @@
                     <input type="radio" name="slider" id="One-Stop">
                     <input type="radio" name="slider" id="Expertise">
                     <input type="radio" name="slider" id="Transparency">
-<!--                    <input type="radio" name="slider" id="Improvement">-->
-<!--                    <input type="radio" name="slider" id="Peace">-->
+                    <!--                    <input type="radio" name="slider" id="Improvement">-->
+                    <!--                    <input type="radio" name="slider" id="Peace">-->
 
                     <div class="list">
                         <label for="home" class="home">
@@ -534,12 +534,12 @@
                         <label for="Transparency" class="Transparency">
                             <span>Transparency</span>
                         </label>
-<!--                        <label for="Improvement" class="Improvement">-->
-<!--                            <span>Continuous Improvement</span>-->
-<!--                        </label>-->
-<!--                        <label for="Peace" class="Peace">-->
-<!--                            <span>Peace of Mind</span>-->
-<!--                        </label>-->
+                        <!--                        <label for="Improvement" class="Improvement">-->
+                        <!--                            <span>Continuous Improvement</span>-->
+                        <!--                        </label>-->
+                        <!--                        <label for="Peace" class="Peace">-->
+                        <!--                            <span>Peace of Mind</span>-->
+                        <!--                        </label>-->
                         <div class="slider"></div>
                     </div>
 
