--- a/home_and_about/term_and_conditions.html
+++ b/home_and_about/term_and_conditions.html
@@ -86,7 +86,7 @@
                 <nav class="navbar">
                     <div class="row" style="display: flex !important;justify-content: space-between">
                         <div class="col-6" style="position: relative;bottom: 13rem !important;">
-                            <a href="about.html"><img src="images/digital_2.png"></a>
+                            <a href="index.html"><img src="images/digital_2.png"></a>
                         </div>
                         <ul class="col-6" style="bottom: 12rem !important;">
                             <li><a href="index.html" class="menu-item">Services</a></li>
